--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,34 @@
   "outputDirectory": "public",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
+  "functions": {
+    "src/api/[...path].ts": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/api/(.*)",
       "destination": "https://back-4lagz8iwv-brunos-projects-0953a500.vercel.app/$1"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS, PATCH"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        }
+      ]
     }
   ]
 }
